Section Towns and Section LiveAnywhere - added

--- a/index.html
+++ b/index.html
@@ -66,5 +66,84 @@
       <p id="homePage-header-text">Go Near</p>
       <button id="homePage-header-button">Explore nearby stays</button>
     </header>
+    <section id="homePage-towns">
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/a161fb95-6875-4aaa-aecd-3a46dead3220.jpg" alt="Varna">
+        <div  class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Varna</p>
+          <p>5 hour drive</p>
+        </div>
+      </div>
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/c2eba2e9-0d80-4704-9e2c-34ac16316c53.jpg" alt="Sveti Vlas">
+        <div class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Sveti Vlas</p>
+          <p>6 hour drive</p>
+        </div>
+      </div>
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/105b8160-1109-4678-b8aa-367ea9faebea.jpg" alt="Velingrad">
+        <div class="homePage-towns-container-text">
+           <p class="homePage-towns-bold-text">Velingrad</p>
+        <p>4.5 hour drive</p>
+        </div>
+      </div>
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/331e6c6a-ba64-4b51-81bf-4d6c610d45a3.jpg" alt="Belogradchik">
+        <div class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Belogradchik</p>
+          <p>3.5 hour drive</p>
+        </div>
+      </div>
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/847cfb7f-788d-42dc-9148-f375348dde76.jpg" alt="Burgas">
+        <div class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Burgas</p>
+          <p>5.5 hour drive</p>
+        </div>
+      </div >
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/ac2086c9-df0d-4085-94c0-94fe3fb94862.jpg" alt="Gabrovo">
+        <div class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Gabrovo</p>
+          <p>2.5 hour drive</p>
+        </div>
+      </div>
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/7d80bee1-a510-4950-a1a0-07a4fb25ec2e.jpg" alt="Sinemorets">
+        <div class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Sinemorets</p>
+          <p>7 hour drive</p>
+        </div>
+      </div>
+      <div class="homePage-towns-container">
+        <img src="https://a0.muscache.com/im/pictures/0445ba36-5684-4cca-9cb1-418a0ffdcd2f.jpg" alt="Byala">
+        <div class="homePage-towns-container-text">
+          <p class="homePage-towns-bold-text">Byala</p>
+          <p>5.5 hour drive</p>
+        </div>
+      </div>
+    </section>
+    <section id="homePage-liveAnywhere">
+      <p>Live Anywhere</p>
+      <div id="homePage-liveAnywhere-allContainers">
+        <div class="homePage-liveAnywhere-container">
+        <img src="https://a0.muscache.com/im/pictures/a0316ecb-e49b-4b3a-b6b6-c2876b820e8c.jpg" alt="Hause">
+        <p>Entire homes</p>
+      </div>
+      <div class="homePage-liveAnywhere-container">
+        <img src="https://a0.muscache.com/im/pictures/ff69ac49-64e7-4f4a-ae2b-ee01163d0790.jpg" alt="Cabin">
+        <p>Cabins and cottages</p>
+      </div>
+      <div class="homePage-liveAnywhere-container">
+        <img src="https://a0.muscache.com/im/pictures/ce6814ba-ed53-4d6e-b8f8-c0bbcf821011.jpg" alt="Outdoor hause">
+        <p>Unique stays</p>
+      </div>
+      <div class="homePage-liveAnywhere-container">
+        <img src="https://a0.muscache.com/im/pictures/fbe849a4-841a-41b3-b770-419402a6316f.jpg" alt="Dog">
+        <p>Pets Welcome</p>
+      </div>
+      </div>
+    </section>
   </body>
 </html>
