Section Online Experiences in Home Page and comments in index.css - added

--- a/index.html
+++ b/index.html
@@ -158,8 +158,42 @@
       </div>
       </div>
     </section>
+    <section id="homePage-onlineExperiences">
+      <div id="homePage-onlineExperiences-allElements">
+      <div id="homePage-onlineExperiences-head">
+        <div>
+          <p class="homePage-onlineExperiences-title">Online Experiences</p>
+          <p class="homePage-onlineExperiences-description">Interactive activities you can do together, led by expert hosts.</p>
+        </div>
+        <div>
+          <button id="homePage-onlineExperiences-button">Explore All</button>
+        </div>
+      </div>
+      <div id="homePage-onlineExperiences-body">
+        <div class="homePage-onlineExperiences-main-container">
+          <img src="https://a0.muscache.com/im/pictures/22f7dfe7-344e-4b55-88a0-3da9e0d45c97.jpg" alt="Italian grandma">
+          <p>Make handmade pasta with Italian grandmas</p>
+        </div>
+        <div class="homePage-onlineExperiences-other-containers">
+          <div class="homePage-onlineExperiences-container-for-second-containers">
+             <div class="homePage-onlineExperiences-second-containers">
+              <img src="https://a0.muscache.com/im/pictures/c4f98b13-4d9e-4376-b014-6b3e827c31d0.jpg" alt="woman">
+              <p>Practice mindful eating through zen philosophy</p>
+          </div>
+          <div class="homePage-onlineExperiences-second-containers">
+            <img src="https://a0.muscache.com/im/pictures/572d1f80-e3dc-4e48-b54b-5c802090e881.jpg" alt="woman">
+            <p>Get to know Argentina's famous Yerba Mate</p>
+          </div>
+          </div>
+          <div class="homePage-onlineExperiences-third-container">
+           <img src="https://a0.muscache.com/im/pictures/15c33e47-2301-43bf-8a3c-8c8aa1643aa9.jpg" alt="woman">
+           <p>Meditate to music with a Parisian concert pianist</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
     </header>
-   
     </div>
     <div id="Experiences"></div>
     <div id="Online-Experiences"></div>
