Added nav in Online Experience page

--- a/index.html
+++ b/index.html
@@ -196,7 +196,28 @@
     </header>
     </div>
     <div id="Experiences"></div>
-    <div id="Online-Experiences"></div>
+    <div id="Online-Experiences">
+       <header id="online-exp-header">
+         <nav id="online-exp-nav">
+          <div id="online-exp-logo">
+            <i id="airbnb-logo-exp" class="fab fa-airbnb"></i>
+            <p class="logo-text">airbnb</p>
+          </div>
+          <div id="becomeHost-language-exp">
+            <button id="onlineExpPage-hostButton">Become a host</button>
+            <button id="onlineExpPage-languageButton">
+              <i class="fas fa-globe-europe"></i>
+            </button>
+            <div id="profileInHeader-exp">
+              <i class="fas fa-bars"></i>
+              <i class="fas fa-user-circle"></i>
+            </div>
+          </div>
+         </nav>
+         <hr class="hr-exp">
+       </header>
+
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
