Created div shadow in online-experiences page, Created button to link Online-Experiences page with the Home Page, Separated css styles into two files, one for Home Page and the other for Exp Page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vacation Rentals, Homes, Experiences & Places - Airbnb</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="HomePage.css" />
+    <link rel="stylesheet" href="OnlineExperiencesPage.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -199,10 +200,10 @@
     <div id="Online-Experiences">
        <header id="online-exp-header">
          <nav id="online-exp-nav">
-          <div id="online-exp-logo">
+          <a id = "visit-homePage" href="file:///C:/Users/martin/Desktop/airBnB/airBnB/index.html#PlacesToStay"><div id="online-exp-logo">
             <i id="airbnb-logo-exp" class="fab fa-airbnb"></i>
             <p class="logo-text">airbnb</p>
-          </div>
+          </div></a>
           <div id="becomeHost-language-exp">
             <button id="onlineExpPage-hostButton">Become a host</button>
             <button id="onlineExpPage-languageButton">
@@ -214,8 +215,14 @@
             </div>
           </div>
          </nav>
-         <hr class="hr-exp">
        </header>
+       <section id="filter-section">
+         <div id="filter-section-header">
+          <p id="filter-section-text">Online Experiences</p>
+          <img id="filter-section-picture" src="pictures/snimka.jpeg" alt="snimka">
+        </div>
+         
+       </section>
 
     </div>
     <script src="index.js"></script>
