Section Join Hosts, Footer - added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vacation Rentals, Homes, Experiences & Places - Airbnb</title>
     <link rel="stylesheet" href="HomePage.css" />
     <link rel="stylesheet" href="OnlineExperiencesPage.css">
+    <link rel="stylesheet" href="Experiences.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -65,7 +66,7 @@
             </div>
           </div>
             <div id="experiencesPage-filter-menu">
-              <div class="homePage-filter-text">
+              <div class="experiencesPage-filter-text">
                 <p class="homePage-filter-firstText">Date</p>
                 <p class="homePage-filter-secondText">Add when you want to go</p>
               </div>
@@ -77,8 +78,7 @@
           <p id="homePage-header-text">Go Near</p>
           <button id="homePage-header-button">Explore nearby stays</button>
             </div>
-          </div>
-        </div>
+        </header>
       </nav>
        <section id="homePage-towns">
       <div class="homePage-towns-container">
@@ -194,7 +194,24 @@
       </div>
       </div>
     </section>
-    </header>
+    <section id="homePage-joinHosts">
+      <p>Join millions of hosts on Airbnb</p>
+      <div class="homePage-joinHosts-body">
+        <div> 
+        <img src="https://a0.muscache.com/im/pictures/2a16f833-464c-446c-8d74-33eb8c643975.jpg" alt="woman"> 
+        <p>Host your home</p>
+        </div>
+        <div>
+          <img src="https://a0.muscache.com/im/pictures/426a8116-0b94-4407-ae87-924126c81d78.jpg" alt="man">
+          <p>Host an Online Experience</p>
+        </div>
+        <div>
+          <img src="https://a0.muscache.com/im/pictures/a84e92bd-68e6-4ce2-9fdf-b2ce1a377f53.jpg" alt="man">
+          <p>Host an Experience</p>
+        </div>
+      </div>
+    </section>
+    </div>
     </div>
     <div id="Experiences"></div>
     <div id="Online-Experiences">
@@ -220,10 +237,73 @@
          <div id="filter-section-header">
           <p id="filter-section-text">Online Experiences</p>
           <img id="filter-section-picture" src="pictures/snimka.jpeg" alt="snimka">
-        </div>
-         
+        </div> 
        </section>
-
+    </div>
+    <div id="footer">
+      <div>
+        <p>ABOUT</p>
+        <ul>
+          <li><a href="https://www.airbnb.com/d/howairbnbworks">How Airbnb works</a></li>
+          <li>
+            <a href="https://www.airbnb.com/press/news">Newsroom</a>
+          </li>
+          <li><a href="https://investors.airbnb.com/?_ga=2.8151986.164855187.1612976398-341634891.1612976398">Investors</a></li>
+          <li><a href="https://www.airbnb.com/plus">Airbnb Plus</a></li>
+          <li><a href="https://www.airbnb.com/luxury">Airbnb Luxe</a></li>
+          <li><a href="https://www.hoteltonight.com/?utm_source_name=Airbnb&utm_campaign_name=Dr_Us_Desktop_Airbnb_Footer">HotelTonight</a></li>
+          <li><a href="https://www.airbnb.com/work?s=footer">Airbnb for Work</a></li>
+          <li><a href="https://www.airbnb.com/d/olympics">Olympics</a></li>
+          <li><a href="https://www.airbnb.com/careers">Careers</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>COMMUNITY</p>
+        <ul>
+          <li><a href="https://www.airbnb.com/diversity">Diversity & Belonging</a></li>
+          <li><a href="https://www.airbnb.com/against-discrimination">Against Discrimination</a></li>
+          <li><a href="https://www.airbnb.com/accessibility">Accessibility</a></li>
+          <li><a href="Airbnb Associates">Airbnb Associates</a></li>
+          <li><a href="https://www.airbnb.com/d/covid19relief">Frontline Stays</a></li>
+          <li><a href="https://www.airbnb.com/invite?r=6">Invite friends</a></li>
+          <li><a href="https://www.airbnb.com/gift-cards">Gift cards</a></li>
+          <li><a href="https://www.airbnb.org/?locale=en&_ga=2.8179634.164855187.1612976398-341634891.1612976398">Airbnb.org</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>HOST</p>
+        <ul>
+          <li><a href="https://www.airbnb.com/host/homes?from_footer=1">Host your home</a></li>
+          <li><a href="https://www.airbnb.com/d/onlinehost">Host an Online Experience</a></li>
+          <li><a href="https://www.airbnb.com/host/experiences">Host an Experience</a></li>
+          <li><a href="https://www.airbnb.com/help/responsible-hosting">Responsible hosting</a></li>
+          <li><a href="https://www.airbnb.com/resources">Resource Center</a></li>
+          <li><a href="https://www.airbnb.com/help/community?s=footer">Community Center</a></li>
+        </ul>
+      </div>
+      <div>
+        <p>SUPPORT</p>
+        <ul>
+          <li><a href="https://www.airbnb.com/d/covidsafety">Our COVID-19 Response</a></li>
+          <li><a href="https://www.airbnb.com/help?from=footer">Help Center</a></li>
+          <li><a href="https://www.airbnb.com/help/article/2701/extenuating-circumstances-policy-and-the-coronavirus-covid19">Cancellation options</a></li>
+          <li><a href="https://www.airbnb.com/neighbors">Neighborhood Support</a></li>
+          <li><a href="https://www.airbnb.com/trust">Trust & Safety</a></li>
+        </ul>
+      </div>
+    </div>
+    <div id="footer2">
+      <div class="footer2-privacy-terms-sitemap">
+        <p>© 2021 Airbnb, Inc. All rights reserved ·</p>
+        <a href="https://www.airbnb.com/terms/privacy_policy">Privacy</a>
+        <a href="https://www.airbnb.com/terms">Terms</a>
+        <a href="https://www.airbnb.com/sitemaps/v2">Sitemap</a>
+      </div>
+      <div class="footer2-socialMedia">
+        <a href="https://www.facebook.com/airbnb"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/airbnb"><i class="fab fa-twitter"></i></a>
+        <a href="https://instagram.com/airbnb"><i class="fab fa-instagram"></i></a>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
