--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </header>
       </nav>
        <section id="homePage-towns">
-      <div class="homePage-towns-container">
+        <div class="homePage-towns-container">
         <img src="https://a0.muscache.com/im/pictures/a161fb95-6875-4aaa-aecd-3a46dead3220.jpg" alt="Varna">
         <div  class="homePage-towns-container-text">
           <p class="homePage-towns-bold-text">Varna</p>
@@ -212,7 +212,6 @@
       </div>
     </section>
     </div>
-    </div>
     <div id="Experiences"></div>
     <div id="Online-Experiences">
        <header id="online-exp-header">
@@ -233,12 +232,11 @@
           </div>
          </nav>
        </header>
-       <section id="filter-section">
-         <div id="filter-section-header">
-          <p id="filter-section-text">Online Experiences</p>
-          <img id="filter-section-picture" src="pictures/snimka.jpeg" alt="snimka">
-        </div> 
-       </section>
+      <section id="onlineExperience-filter-section" >
+        <div id="filter-section-header">
+          <p>Welcome</p>
+        </div>
+      </section>
     </div>
     <div id="footer">
       <div>
