--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
         <div id="homePage-filter">
           <div id="homePage-filter-menu">
-            <div class="homePage-filter-text">
+            <div id="location" class="homePage-filter-text">
               <p class="homePage-filter-firstText">Location</p>
               <p class="homePage-filter-secondText">Where are you going?</p>
             </div>
@@ -234,7 +234,29 @@
        </header>
       <section id="onlineExperience-filter-section" >
         <div id="filter-section-header">
-          <p>Welcome</p>
+          <p>Online Experiences</p>
+          <p>Find unique activities led by one-of-a-kind hosts — all without leaving home.</p>
+        </div>
+        <div id="filter-section-filters">
+          <button id="filter-button">
+            <div id="filter-button-text"><i class="fas fa-sort-amount-down-alt"></i><p>Filters</p></div></button>
+          <button id="filter-dates">Dates</button>
+          <button id="filter-groupSize">Group Size</button>
+          <hr id="vertical-line-section">
+          <div id="filter-section-categories">
+          <button class="button-category">Great for Groups</button>
+          <button class="button-category">Family friendly</button>
+          <button class="button-category">Animals</button>
+          <button class="button-category">Arts and writing</button>
+          <button class="button-category">Painting</button>
+          <button class="button-category">Cooking</button>
+          <button class="button-category">Dance</button>
+          <button class="button-category">Drinks</button>
+          <button class="button-category">Fitness</button>
+          <button class="button-category">History & Culture</button>
+          <button class="button-category">Magic</button>
+          <button class="button-category">Entertainment</button>
+          </div>
         </div>
       </section>
     </div>
