Created Online Experiences and Online Experience Manager objects, fixed header text in online experiences page

--- a/index.html
+++ b/index.html
@@ -234,12 +234,13 @@
        </header>
       <section id="onlineExperience-filter-section" >
         <div id="filter-section-header">
-          <p>Online Experiences</p>
-          <p>Find unique activities led by one-of-a-kind hosts — all without leaving home.</p>
+          <p id="filter-section-header-firstText">Online <br> Experiences</p>
+          <p id="filter-section-header-secondText">Find unique activities led by one-of-a-kind<br> hosts — all without leaving home.</p>
+        
         </div>
         <div id="filter-section-filters">
           <button id="filter-button">
-            <div id="filter-button-text"><i class="fas fa-sort-amount-down-alt"></i><p>Filters</p></div></button>
+            <a id="filter-section-link" href="#FilterSection"><div id="filter-button-text"><i class="fas fa-sort-amount-down-alt"></i><p>Filters</p></div></button></a>
           <button id="filter-dates">Dates</button>
           <button id="filter-groupSize">Group Size</button>
           <hr id="vertical-line-section">
@@ -325,6 +326,8 @@
         <a href="https://instagram.com/airbnb"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
+    <script src="OnlineExperiences.js"></script>
+    <script src="OnlineExperiencesManager.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
