Dropdown Profile in Home Page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
               <i class="fas fa-bars"></i>
               <i class="fas fa-user-circle"></i>
             </div>
+            <div id="dropdown-profileInHeader">
+              <div>
+               <a href="">Sign up</a>
+               <a id="dropdown-logIn" href="">Log in</a>
+               <a href="https://www.airbnb.com/host/homes">Host your home</a>
+               <a href="https://www.airbnb.com/d/onlinehost">Host an experience</a>
+               <a href="https://www.airbnb.com/help">Help</a>
+              </div> 
+            </div>
           </div>
         </nav>
         <div id="homePage-filter">
