--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="dropdown-profileInHeader">
               <div>
                <a href="">Sign up</a>
-               <a id="dropdown-logIn" href="">Log in</a>
+               <a id="dropdown-logIn">Log in</a>
                <a href="https://www.airbnb.com/host/homes">Host your home</a>
                <a href="https://www.airbnb.com/d/onlinehost">Host an experience</a>
                <a href="https://www.airbnb.com/help">Help</a>
@@ -86,6 +86,19 @@
           </div>
           <p id="homePage-header-text">Go Near</p>
           <button id="homePage-header-button">Explore nearby stays</button>
+            </div>
+            <div id="homePage-logIn">
+              <div id="close-logIn-homePage">
+                <i class="far fa-times-circle"></i>
+              </div>
+              <p>Log In</p>
+              <form>
+                <label for="username">Username:</label>
+                <input type="text" name="username" id="username-logIn">
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="password-logIn">
+                <input type="submit" value="Continue" id="logIn-button">
+              </form>
             </div>
         </header>
       </nav>
