Created object section in Online Experiences file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="OnlineExperiencesPage.css">
     <link rel="stylesheet" href="Experiences.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="stylesheet" href="Objects.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
@@ -279,6 +280,10 @@
           </div>
         </div>
       </section>
+      <section id="onlineExperience-experiences-section">
+            <p class="online-experiences-section-header">Best sellers </p>
+            <div id="onlineExperience-experiences-section-container"></div>
+      </section>
     </div>
     <div id="footer">
       <div>
@@ -345,6 +350,7 @@
         <a href="https://instagram.com/airbnb"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
+    <script src="OnlineExperiencesObjects.js"></script>
     <script src="OnlineExperiences.js"></script>
     <script src="OnlineExperiencesManager.js"></script>
     <script src="index.js"></script>
