Created filter display functionality and added more objects to display

--- a/index.html
+++ b/index.html
@@ -268,18 +268,18 @@
           <button id="filter-groupSize">Group Size</button>
           <hr id="vertical-line-section">
           <div id="filter-section-categories">
-          <button class="button-category">Great for Groups</button>
-          <button class="button-category">Family friendly</button>
-          <button class="button-category">Animals</button>
-          <button class="button-category">Arts and writing</button>
-          <button class="button-category">Painting</button>
-          <button class="button-category">Cooking</button>
-          <button class="button-category">Dance</button>
-          <button class="button-category">Drinks</button>
-          <button class="button-category">Fitness</button>
-          <button class="button-category">History & Culture</button>
-          <button class="button-category">Magic</button>
-          <button class="button-category">Entertainment</button>
+          <button id="btn-category-greatForGroups" class="button-category">Great for Groups</button>
+          <button id="btn-category-familyFriendly" class="button-category">Family friendly</button>
+          <button id="btn-category-animals" class="button-category">Animals</button>
+          <button id="btn-category-arts&writing" class="button-category">Arts and writing</button>
+          <button id ="btn-category-painting" class="button-category">Painting</button>
+          <button id="btn-category-cooking" class="button-category">Cooking</button>
+          <button id="btn-category-dance" class="button-category">Dance</button>
+          <button id="btn-category-drinks" class="button-category">Drinks</button>
+          <button id="btn-category-fitness" class="button-category">Fitness</button>
+          <button id="btn-category-history&culture" class="button-category">History & Culture</button>
+          <button id="btn-category-magic" class="button-category">Magic</button>
+          <button id="btn-category-entertainment" class="button-category">Entertainment</button>
           </div>
         </div>
       </section>
