--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div id="PlacesToStay">
-      <header id="homePage-header">
+    <header id="homePage-header">
         <nav id="homePage-nav">
           <div id="homePage-logo">
             <i class="fab fa-airbnb"></i>
@@ -59,7 +59,7 @@
           </div>
         </nav>
         <div id="homePage-filter">
-            <form>
+          <form>
             <div id="location" class="homePage-filter-text">
               <p class="homePage-filter-firstText">Location</p>
               <p id="homePage-filter-location-secondText" class="homePage-filter-secondText">Where are you going?</p>
@@ -80,14 +80,13 @@
               <p id="homePage-filter-guests-secondText" class="homePage-filter-secondText">Add guests</p>
               <input id="filter-input-guests" type="number">
             </div>
-             <div id="homePage-filter-submit-div" class="homePage-filter-text">
+            <div id="homePage-filter-submit-div" class="homePage-filter-text">
                <button id="filter-input-submit" type="submit"><i class="fas fa-search"></i></button>
             </div>
-            </form>
+          </form>
           </div>
           <p id="homePage-header-text">Go Near</p>
           <button id="homePage-header-button">Explore nearby stays</button>
-            </div>
             <div id="homePage-logIn">
               <div id="close-logIn-homePage">
                 <i class="far fa-times-circle"></i>
@@ -101,15 +100,14 @@
                 <input type="submit" value="Continue" id="logIn-button">
               </form>
             </div>
-        </header>
-      </nav>
-       <section id="homePage-towns">
-        <div class="homePage-towns-container">
+    </header>
+    <section id="homePage-towns">
+      <div class="homePage-towns-container">
         <img src="https://a0.muscache.com/im/pictures/a161fb95-6875-4aaa-aecd-3a46dead3220.jpg" alt="Varna">
         <div  class="homePage-towns-container-text">
           <p class="homePage-towns-bold-text">Varna</p>
           <p>5 hour drive</p>
-        </div>
+      </div>
       </div>
       <div class="homePage-towns-container">
         <img src="https://a0.muscache.com/im/pictures/c2eba2e9-0d80-4704-9e2c-34ac16316c53.jpg" alt="Sveti Vlas">
@@ -122,7 +120,7 @@
         <img src="https://a0.muscache.com/im/pictures/105b8160-1109-4678-b8aa-367ea9faebea.jpg" alt="Velingrad">
         <div class="homePage-towns-container-text">
            <p class="homePage-towns-bold-text">Velingrad</p>
-        <p>4.5 hour drive</p>
+           <p>4.5 hour drive</p>
         </div>
       </div>
       <div class="homePage-towns-container">
@@ -165,64 +163,64 @@
       <p>Live Anywhere</p>
       <div id="homePage-liveAnywhere-allContainers">
         <div class="homePage-liveAnywhere-container">
-        <img src="https://a0.muscache.com/im/pictures/a0316ecb-e49b-4b3a-b6b6-c2876b820e8c.jpg" alt="Hause">
-        <p>Entire homes</p>
-      </div>
-      <div class="homePage-liveAnywhere-container">
-        <img src="https://a0.muscache.com/im/pictures/ff69ac49-64e7-4f4a-ae2b-ee01163d0790.jpg" alt="Cabin">
-        <p>Cabins and cottages</p>
-      </div>
-      <div class="homePage-liveAnywhere-container">
-        <img src="https://a0.muscache.com/im/pictures/ce6814ba-ed53-4d6e-b8f8-c0bbcf821011.jpg" alt="Outdoor hause">
-        <p>Unique stays</p>
-      </div>
-      <div class="homePage-liveAnywhere-container">
-        <img src="https://a0.muscache.com/im/pictures/fbe849a4-841a-41b3-b770-419402a6316f.jpg" alt="Dog">
-        <p>Pets Welcome</p>
-      </div>
+          <img src="https://a0.muscache.com/im/pictures/a0316ecb-e49b-4b3a-b6b6-c2876b820e8c.jpg" alt="Hause">
+          <p>Entire homes</p>
+        </div>
+        <div class="homePage-liveAnywhere-container">
+          <img src="https://a0.muscache.com/im/pictures/ff69ac49-64e7-4f4a-ae2b-ee01163d0790.jpg" alt="Cabin">
+          <p>Cabins and cottages</p>
+        </div>
+        <div class="homePage-liveAnywhere-container">
+          <img src="https://a0.muscache.com/im/pictures/ce6814ba-ed53-4d6e-b8f8-c0bbcf821011.jpg" alt="Outdoor hause">
+          <p>Unique stays</p>
+        </div>
+        <div class="homePage-liveAnywhere-container">
+          <img src="https://a0.muscache.com/im/pictures/fbe849a4-841a-41b3-b770-419402a6316f.jpg" alt="Dog">
+          <p>Pets Welcome</p>
+        </div>
       </div>
     </section>
     <section id="homePage-onlineExperiences">
       <div id="homePage-onlineExperiences-allElements">
-      <div id="homePage-onlineExperiences-head">
-        <div>
-          <p class="homePage-onlineExperiences-title">Online Experiences</p>
-          <p class="homePage-onlineExperiences-description">Interactive activities you can do together, led by expert hosts.</p>
-        </div>
-        <div>
+        <div id="homePage-onlineExperiences-head">
+          <div>
+            <p class="homePage-onlineExperiences-title">Online Experiences</p>
+            <p class="homePage-onlineExperiences-description">Interactive activities you can do together, led by expert hosts.</p>
+          </div>
+          <div>
           <button id="homePage-onlineExperiences-button">Explore All</button>
-        </div>
-      </div>
-      <div id="homePage-onlineExperiences-body">
-        <div class="homePage-onlineExperiences-main-container">
-          <img src="https://a0.muscache.com/im/pictures/22f7dfe7-344e-4b55-88a0-3da9e0d45c97.jpg" alt="Italian grandma">
-          <p>Make handmade pasta with Italian grandmas</p>
-        </div>
-        <div class="homePage-onlineExperiences-other-containers">
-          <div class="homePage-onlineExperiences-container-for-second-containers">
-             <div class="homePage-onlineExperiences-second-containers">
-              <img src="https://a0.muscache.com/im/pictures/c4f98b13-4d9e-4376-b014-6b3e827c31d0.jpg" alt="woman">
-              <p>Practice mindful eating through zen philosophy</p>
-          </div>
-          <div class="homePage-onlineExperiences-second-containers">
-            <img src="https://a0.muscache.com/im/pictures/572d1f80-e3dc-4e48-b54b-5c802090e881.jpg" alt="woman">
-            <p>Get to know Argentina's famous Yerba Mate</p>
-          </div>
-          </div>
-          <div class="homePage-onlineExperiences-third-container">
-           <img src="https://a0.muscache.com/im/pictures/15c33e47-2301-43bf-8a3c-8c8aa1643aa9.jpg" alt="woman">
-           <p>Meditate to music with a Parisian concert pianist</p>
           </div>
         </div>
-      </div>
+        <div id="homePage-onlineExperiences-body">
+          <div class="homePage-onlineExperiences-main-container">
+            <img src="https://a0.muscache.com/im/pictures/22f7dfe7-344e-4b55-88a0-3da9e0d45c97.jpg" alt="Italian grandma">
+            <p>Make handmade pasta with Italian grandmas</p>
+          </div>
+          <div class="homePage-onlineExperiences-other-containers">
+            <div class="homePage-onlineExperiences-container-for-second-containers">
+              <div class="homePage-onlineExperiences-second-containers">
+                <img src="https://a0.muscache.com/im/pictures/c4f98b13-4d9e-4376-b014-6b3e827c31d0.jpg" alt="woman">
+                <p>Practice mindful eating through zen philosophy</p>
+              </div>
+              <div class="homePage-onlineExperiences-second-containers">
+                <img src="https://a0.muscache.com/im/pictures/572d1f80-e3dc-4e48-b54b-5c802090e881.jpg" alt="woman">
+                <p>Get to know Argentina's famous Yerba Mate</p>
+              </div>
+            </div>
+            <div class="homePage-onlineExperiences-third-container">
+              <img src="https://a0.muscache.com/im/pictures/15c33e47-2301-43bf-8a3c-8c8aa1643aa9.jpg" alt="woman">
+              <p>Meditate to music with a Parisian concert pianist</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section id="homePage-joinHosts">
       <p>Join millions of hosts on Airbnb</p>
       <div class="homePage-joinHosts-body">
         <div> 
-        <img src="https://a0.muscache.com/im/pictures/2a16f833-464c-446c-8d74-33eb8c643975.jpg" alt="woman"> 
-        <p>Host your home</p>
+          <img src="https://a0.muscache.com/im/pictures/2a16f833-464c-446c-8d74-33eb8c643975.jpg" alt="woman"> 
+          <p>Host your home</p>
         </div>
         <div>
           <img src="https://a0.muscache.com/im/pictures/426a8116-0b94-4407-ae87-924126c81d78.jpg" alt="man">
@@ -234,7 +232,7 @@
         </div>
       </div>
     </section>
-    </div>
+  </div>
     <div id="Experiences"></div>
     <div id="Online-Experiences">
        <header id="online-exp-header">
@@ -289,14 +287,15 @@
             <button id="btn-loadMore" class="button-loadMore">Load more</button>
       </section>
     </div>
+    <div id="filteredHomesPage">
+
+    </div>
     <div id="footer">
       <div>
         <p>ABOUT</p>
         <ul>
           <li><a href="https://www.airbnb.com/d/howairbnbworks">How Airbnb works</a></li>
-          <li>
-            <a href="https://www.airbnb.com/press/news">Newsroom</a>
-          </li>
+          <li><a href="https://www.airbnb.com/press/news">Newsroom</a></li>
           <li><a href="https://investors.airbnb.com/?_ga=2.8151986.164855187.1612976398-341634891.1612976398">Investors</a></li>
           <li><a href="https://www.airbnb.com/plus">Airbnb Plus</a></li>
           <li><a href="https://www.airbnb.com/luxury">Airbnb Luxe</a></li>
@@ -359,5 +358,9 @@
     <script src="OnlineExperiencesManager.js"></script>
     <script src="index.js"></script>
     <script src="homePage.js"></script>
+    <script src="Home.js"></script>
+    <script src="HomeManager.js"></script>
+    <script src="homeObjects.js"></script>
+    <script src="filteredHomesPage.js"></script>
   </body>
 </html>
