Structural changes made (MVC)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             type = "image/x-icon">
     <link rel="stylesheet" href="View/homePage.css" />
     <link rel="stylesheet" href="View/filteredHomesPage.css">
-    <link rel="stylesheet" href="OnlineExperiencesPage.css">
+    <link rel="stylesheet" href="View/OnlineExperiencesPage.css">
     <link rel="stylesheet" href="View/Experiences.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="Objects.css">
+    <link rel="stylesheet" href="View/Objects.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
@@ -363,9 +363,9 @@
   </div>
 </script>
    <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
-    <script src="OnlineExperiencesObjects.js"></script>
-    <script src="OnlineExperiences.js"></script>
-    <script src="OnlineExperiencesManager.js"></script>
+    <script src="Model/onlineExperiencesObjects.js"></script>
+    <script src="Model/OnlineExperiences.js"></script>
+    <script src="Model/OnlineExperiencesManager.js"></script>
     <script src="index.js"></script>
     <script src="Controller/homePage.js"></script>
     <script src="Model/Home.js"></script>
