--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       </div>
     </div>
     <script id="home-template" type="text/x-handlebars-template">
-      {{#each filteredHomes}}
+      {{#each homes}}
       <div class="home-template">
         <img src= {{image}} alt="home">
         <div class="text-template">
