--- a/index.html
+++ b/index.html
@@ -366,7 +366,9 @@
     <script src="Model/onlineExperiencesObjects.js"></script>
     <script src="Model/OnlineExperiences.js"></script>
     <script src="Model/OnlineExperiencesManager.js"></script>
-    <script src="index.js"></script>
+    <script src="Controller/utils.js"></script>
+    <script src="Controller/onlineExperiencesFunctions.js"></script>
+    <script src="Controller/index.js"></script>
     <script src="Controller/homePage.js"></script>
     <script src="Model/Home.js"></script>
     <script src="Model/HomeManager.js"></script>
